docs/7.56/md/abennews-70.md
  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70_ehps.htm) → 

News for Release 7.0

The following topics were revised in development of Application Server ABAP 7.0:

-   [Switch Framework in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-sfw.htm)
-   [Enhancement Concept in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-enhancement.htm)
-   [Internal Tables in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-tabellen.htm)
-   [Character String Processing in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-regex.htm)
-   [Shared Objects in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-shared_objects.htm)
-   [File Interface in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-dataset.htm)
-   [Object Services in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-700-object_services.htm)
-   [Remote Function Call for Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-rfc.htm)
-   [XML Binding in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-xml.htm)
-   [Tools in Release 7.00](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-700-tools.htm)
-   [Further Changes in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-700-others.htm)
-   [Syntax Cleanup in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-cleanup.htm)
-   [ABAP Keyword Documentation in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-docu.htm)

Continue
[Switch Framework in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-sfw.htm)
[Enhancement Concept in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-enhancement.htm)
[Internal Tables in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-tabellen.htm)
[Character String Processing in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-regex.htm)
[Shared Objects in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-shared_objects.htm)
[File Interface in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-dataset.htm)
[Object Services in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-700-object_services.htm)
[Remote Function Call for Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-rfc.htm)
[XML Binding in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-xml.htm)
[Tools in Release 7.00](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-700-tools.htm)
[Further Changes in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-700-others.htm)
[Syntax Cleanup in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-cleanup.htm)
[ABAP Keyword Documentation in Release 7.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-70-docu.htm)